# leptos-motion

./: .clippy.toml  .eslintrc.js  .gitignore  .markdownlint.yaml  .pnpmrc  .pre-commit-config.yaml  .prettierrc  ADR_COMPLIANCE_ANALYSIS.md  ADR_IMPLEMENTATION_STATUS.md  ANIMATION_LIBRARY_ANALYSIS.md  API_CONTRACT.md  API_ISSUES_ANALYSIS.md  BETA_RELEASE_READY.md  CHANGELOG.md  COMPATIBILITY_ANALYSIS.md  COMPATIBILITY_SUMMARY.md  COMPREHENSIVE_E2E_TEST_RESULTS.md  COMPREHENSIVE_FIXES_ANALYSIS.md  CONTRIBUTING.md  Cargo.toml  DESIGN_DOCUMENT.md  DEVELOPMENT.md  GAP_ANALYSIS.md  GETTING_STARTED_MANUAL.md  GITHUB_RELEASE.md  IMMEDIATE_FIX_GUIDE.md  IMPLEMENTATION_ROADMAP.md  LEPTOS_LOCAL_CRATES_ISSUES.md  LEPTOS_MOTION_REMEDIATION_PLAN.md  LEPTOS_MOTION_USER_GUIDE.md  LIBRARY_UPDATE_SUMMARY.md  LICENSE  LLM_API_REFERENCE.json  MIGRATION_GUIDE.md  Makefile  PRODUCTION_ROADMAP.md  PROJECT_STRUCTURE.md  REACTIVE_MOTION_DIV_API_ISSUE.md  REACTIVITY_FIX_GUIDE.md  README.md  (+46 more)
benches/: Cargo.toml  lib.rs  performance_benchmarks.rs
benches/performance_benchmarks/: main.rs
crates/leptos-motion/: Cargo.toml
crates/leptos-motion-core/: Cargo.toml
crates/leptos-motion-core/proptest-regressions/: fuzz_tests_1.txt  fuzz_tests_3.txt  fuzz_tests_4.txt  performance_stress_tests.txt  property_based_tests.txt
crates/leptos-motion-core/src/: advanced_examples.rs  animation.rs  basic_functionality_tests.rs  bundle_size_optimization_tests.rs  bundle_size_tests.rs  compatibility_tests.rs  dead_code_elimination_tests.rs  dependency_investigation_tests.rs  dependency_optimization_phase4_tests.rs  dependency_optimization_tests.rs  developer_tools.rs  easing.rs  ecosystem_integration.rs  engine.rs  error_handling_tdd_tests.rs  feature_flags_optimization_tests.rs  feature_flags_phase3_tests.rs  feature_flags_tests.rs  fuzz_tests_1.rs  fuzz_tests_2.rs  fuzz_tests_3.rs  fuzz_tests_4.rs  interpolation.rs  lazy_loading.rs  lib.rs  macros.rs  math.rs  memory_optimization.rs  memory_optimization_tests.rs  minimal_engine.rs  minimal_serialization.rs  performance.rs  performance_optimization_tdd_tests.rs  performance_stress_tests.rs  performance_tests.rs  property_based_tests.rs  serde_replacement_tests.rs  simplified_engine.rs  simplified_engine_tests.rs  spring.rs  (+12 more)
crates/leptos-motion-dom/: Cargo.toml
crates/leptos-motion-dom/proptest-regressions/: fuzz_tests.txt  visual_regression_tests.txt
crates/leptos-motion-dom/src/: 3d_animation_implementation.rs  3d_animation_tests.rs  accessibility_tests.rs  advanced_3d_features_tests.rs  advanced_features_tdd_tests.rs  advanced_features_tdd_tests.rs.disabled  advanced_performance_tests.rs  animate_presence.rs  animate_presence_tests.rs  animation_3d_implementation.rs  animation_3d_tests.rs  animation_engine.rs  animation_engine_tests.rs  animation_reactivity_tests.rs  api_contract_tests.rs  api_documentation_3d_tests.rs  components.rs  components.rs.backup  components.rs.current  components_tdd_tests.rs  components_tests.rs  cross_browser_tests.rs  css_animations.rs  dom_integration_tdd_tests.rs  dom_integration_tdd_tests.rs.disabled  drag_animation_tests.rs  drag_constraint_integration_tests.rs  drag_constraint_tests.rs  drag_integration_tests.rs  easing_functions.rs  elements.rs  engine_integrated_motion_div.rs  enhanced_motion_div.rs  enhanced_motion_div_tests.rs  fixed_motion_div.rs  flip_animation_tests.rs  fuzz_tests.rs  hooks.rs  hooks_tdd_tests.rs  improved_motion_div.rs  (+52 more)
crates/leptos-motion-dom/tests/: reactive_animation_test.rs  signal_based_animation_controller_tests.rs
crates/leptos-motion-gestures/: Cargo.toml
crates/leptos-motion-gestures/src/: drag.rs  gesture_animation_tdd_tests.rs  gesture_detector.rs  gesture_system_tdd_tests.rs  gesture_tests.rs  hover.rs  lib.rs  multi_touch.rs  multi_touch_tdd_tests.rs  simplified_gesture_api.rs  simplified_gesture_tests.rs  tap.rs
crates/leptos-motion-layout/: Cargo.toml
crates/leptos-motion-layout/src/: flip.rs  flip_tdd_tests.rs  flip_tests.rs  layout_tracker.rs  lib.rs  presets.rs  shared_elements.rs  simplified_layout_api.rs  simplified_layout_tests.rs  types.rs
crates/leptos-motion-macros/: Cargo.toml
crates/leptos-motion-macros/src/: lib.rs
crates/leptos-motion-scroll/: Cargo.toml
crates/leptos-motion-scroll/src/: lib.rs  scroll_integration_tests.rs
crates/leptos-motion-studio/: Cargo.toml
crates/leptos-motion-studio/src/: export.rs  lib.rs  morphing.rs  pooling.rs  preview.rs  project.rs  studio.rs  tests.rs  timeline.rs  transforms.rs  webgl.rs
crates/leptos-motion-studio/tests/: integration_tests.rs
crates/leptos-motion-webgl/: Cargo.toml
crates/leptos-motion-webgl/src/: camera.rs  error.rs  geometry.rs  lib.rs  (+19 more)
examples/advanced-features/: Cargo.toml
examples/advanced-gestures/: Cargo.toml  style.css
examples/basic-animations/: Cargo.toml
examples/capability-showcase/: Cargo.toml  QUICKSTART.md  README.md  index.html  package-lock.json  package.json  playwright.config.ts  serve.py
examples/comprehensive-demo/: Cargo.toml  README.md  console_debug.html  debug.html  demo.html  index.html  serve.py  simple.html  simple_test.html  test.html  test_demo.html
examples/css-class-showcase/: Cargo.toml  README.md  index.html
examples/dashboard-app/: Cargo.toml
examples/e-commerce-gallery/: Cargo.toml  index.html
examples/minimal-showcase/: Cargo.toml  index.html
examples/mobile-app/: Cargo.toml
examples/showcase/: Cargo.toml  Trunk.toml  index.html  style.css
examples/studio-demo/: Cargo.toml  index.html
examples/ultra-minimal/: Cargo.toml  index.html
examples/v0.7-showcase/: Cargo.toml  Cargo_debug.toml  README.md  build.sh  comprehensive-showcase.html  debug.html  debug_test.html  demo.html  homepage.html  minimal.html  package-lock.json  package.json  performance-dashboard.html  playwright.config.ts  run-tests-with-timeouts.js  simple-demo.html  simple.html  simple_test.html  static-showcase.html  test.html  v0_7_showcase.js  v0_7_showcase_bg.wasm
examples/webgl-demo/: Cargo.toml  README.md  build.sh  demo.html  index.html  open_demo.sh  server.py
(+370 files in other folders)
