[workspace]
members = [
    "crates/leptos-motion-core",
    "crates/leptos-motion-dom",
    "crates/leptos-motion-gestures",
    "crates/leptos-motion-layout",
    "crates/leptos-motion-scroll",
    "crates/leptos-motion-macros",
    "crates/leptos-motion",
    "examples/basic-animations",
    "examples/showcase",
    "examples/advanced-gestures",
]
resolver = "2"

[workspace.package]
version = "0.2.0-beta.1"
authors = ["CloudShuttle Team <team@cloud-shuttle.io>"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.70"
repository = "https://github.com/cloud-shuttle/leptos-motion"
homepage = "https://leptos-motion.dev"
documentation = "https://docs.rs/leptos-motion"
keywords = ["animation", "leptos", "wasm", "web", "ui"]
categories = ["gui", "wasm", "web-programming"]
description = "A comprehensive animation library for Leptos with Motion-inspired API"

[workspace.dependencies]
# Core Leptos dependencies
leptos = { version = "0.8.5", features = ["csr", "hydrate", "ssr"] }
leptos_meta = "0.8.5"
leptos_router = "0.8.5"

# Leptos Motion dependencies
leptos-motion = { path = "crates/leptos-motion" }
leptos-motion-core = { path = "crates/leptos-motion-core" }
leptos-motion-dom = { path = "crates/leptos-motion-dom" }
leptos-motion-gestures = { path = "crates/leptos-motion-gestures" }
leptos-motion-layout = { path = "crates/leptos-motion-layout" }
leptos-motion-scroll = { path = "crates/leptos-motion-scroll" }
leptos-motion-macros = { path = "crates/leptos-motion-macros" }

# WASM-specific dependencies
getrandom = { version = "0.3", features = ["wasm_js"] }

# Web APIs
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Document", 
    "Element",
    "HtmlElement",
    "CssStyleDeclaration",
    "DomRect",
    "Performance",
    "AnimationEvent",
    "TransitionEvent",
    "Animation",
    "KeyframeEffect",
    "EventTarget",
    "Event",
    "MouseEvent",
    "TouchEvent",
    "PointerEvent",
    "Touch",
    "TouchList",
    "AddEventListenerOptions",
    "Node",
    "WheelEvent",
    "KeyboardEvent",
] }
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

# Utility crates
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
once_cell = "1.19"
paste = "1.0"

# Math and interpolation
num-traits = "0.2"
approx = "0.5"

# Async and futures
futures = "0.3"
tokio = { version = "1.0", features = ["time"] }

# Logging and debugging
log = "0.4"
console_log = "1.0"
console_error_panic_hook = "0.1"

# Development and testing dependencies
wasm-bindgen-test = "0.3"
pretty_assertions = "1.4"
test-case = "3.1"

[[workspace.metadata.leptos]]
name = "showcase"
path = "examples/showcase"
target = "examples/showcase/index.html"
dist = "examples/showcase/dist"
bin-package = "showcase"
lib-package = "showcase"
# Additional required fields for Leptos apps
client-package = "showcase"
client-features = ["csr"]
client-target = "wasm32-unknown-unknown"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"