[workspace]
members = [
    "crates/leptos-motion-core",
    "crates/leptos-motion-dom",
    "crates/leptos-motion-gestures",
    "crates/leptos-motion-layout",
    "crates/leptos-motion-scroll",
    "crates/leptos-motion-macros",
    "crates/leptos-motion",
    "examples/basic-animations",
    "examples/showcase",
    "examples/minimal-showcase",
    "examples/ultra-minimal",
    "examples/advanced-gestures",
    "examples/css-class-showcase",
    "benches",
]
resolver = "2"

[workspace.package]
version = "0.3.0-beta.3"
authors = ["CloudShuttle Team <team@cloud-shuttle.io>"]
license = "MIT OR Apache-2.0"
edition = "2024"  # Latest edition as of September 2025
rust-version = "1.89"  # Latest stable
repository = "https://github.com/cloud-shuttle/leptos-motion"
homepage = "https://leptos-motion.dev"
documentation = "https://docs.rs/leptos-motion"
keywords = ["animation", "leptos", "wasm", "web", "ui"]
categories = ["gui", "wasm", "web-programming"]
description = "A comprehensive animation library for Leptos with Motion-inspired API"

[workspace.dependencies]
# Core Leptos dependencies (Latest stable versions as of September 2025)
leptos = { version = "0.8.8", features = ["csr", "hydrate", "ssr"] }
leptos_meta = "0.8.5"
leptos_router = "0.8.6"

# Leptos Motion dependencies
leptos-motion = { path = "crates/leptos-motion" }
leptos-motion-core = { version = "0.3.0-beta.1" }
leptos-motion-dom = { version = "0.3.0-beta.1" }
leptos-motion-gestures = { version = "0.3.0-beta.1" }
leptos-motion-layout = { version = "0.3.0-beta.1" }
leptos-motion-scroll = { version = "0.3.0-beta.1" }
leptos-motion-macros = { version = "0.3.0-beta.1" }

# WASM-specific dependencies
getrandom = { version = "0.3", features = ["wasm_js"] }

# Web APIs (Latest stable versions)
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Document", 
    "Element",
    "HtmlElement",
    "CssStyleDeclaration",
    "DomRect",
    "Performance",
    "AnimationEvent",
    "TransitionEvent",
    "Animation",
    "KeyframeEffect",
    "EventTarget",
    "Event",
    "MouseEvent",
    "TouchEvent",
    "PointerEvent",
    "Touch",
    "TouchList",
    "AddEventListenerOptions",
    "Node",
    "WheelEvent",
    "KeyboardEvent",
] }
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

# Utility crates (Latest stable versions)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
once_cell = "1.19"
paste = "1.0"

# Math and interpolation
num-traits = "0.2"
approx = "0.5"

# Async and futures (Latest stable versions)
futures = "0.3"
tokio = { version = "1.0", features = ["time"] }

# Logging and debugging
log = "0.4"
console_log = "1.0"
console_error_panic_hook = "0.1"

# Development and testing dependencies (Latest stable versions)
wasm-bindgen-test = "0.3"
pretty_assertions = "1.4"
test-case = "3.1"

# Modern TDD crates (Latest stable versions)
rstest = "0.19"
proptest = "1.4"
quickcheck = "1.0"
trybuild = "1.0"
macrotest = "1.0"
clitest = "0.1"

# Performance testing
criterion = { version = "0.5", features = ["html_reports"] }
divan = "0.1"
iai = "0.1"

# Coverage and testing tools
cargo-tarpaulin = "0.25"
cargo-llvm-cov = "0.6"
cargo-nextest = "0.14"

# Concurrency
rayon = "1.8"
async-std = "1.12"

# Development tools
cargo-watch = "8.4"
cargo-expand = "1.0"
cargo-udeps = "0.1"
cargo-audit = "0.18"
cargo-deny = "0.14"

[[workspace.metadata.leptos]]
name = "showcase"
path = "examples/showcase"
target = "examples/showcase/index.html"
dist = "examples/showcase/dist"
bin-package = "showcase"
lib-package = "showcase"
# Additional required fields for Leptos apps
client-package = "showcase"
client-features = ["csr"]
client-target = "wasm32-unknown-unknown"


[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"