[package]
name = "leptos-motion-core"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Core animation engine for Leptos Motion"
keywords.workspace = true
categories.workspace = true

[features]
default = ["raf", "waapi", "core-animations", "leptos-integration", "web-sys", "serde-support"]
# Core features
core-animations = []
raf = []
waapi = ["web-sys/Animation", "web-sys/KeyframeEffect"]
spring = []
easing = []
web-sys = []  # Full web-sys features (enables web-sys dependency)

# Bundle size optimization features
minimal = []  # Minimal build without heavy dependencies
leptos-integration = ["leptos"]  # Leptos integration (adds ICU dependencies)
no-icu = []  # Avoid ICU dependencies
minimal-web-sys = ["web-sys/console", "web-sys/Window", "web-sys/Document", "web-sys/Element", "web-sys/HtmlElement", "web-sys/CssStyleDeclaration"]  # Minimal web-sys features for smaller bundles

# Optional features for bundle size optimization
advanced-easing = []
performance-metrics = []
simplified-engine = []
full-engine = []
spring-physics = []
serde-support = ["serde", "serde_json"]  # Optional serde support for serialization

[dependencies]
# Math and calculations
num-traits.workspace = true
approx.workspace = true

# Web APIs - conditional features for bundle size optimization
web-sys = { workspace = true, features = [
    "console",
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "CssStyleDeclaration",
    "DomRect",
    "Performance",
    "AnimationEvent",
    "TransitionEvent",
    "Animation",
    "KeyframeEffect",
], optional = true }
js-sys.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true

# Async
futures.workspace = true

# Leptos (for motion values) - optional to avoid ICU dependencies
leptos = { workspace = true, optional = true }

# Utilities
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
thiserror.workspace = true
once_cell.workspace = true
log.workspace = true

[dev-dependencies]
wasm-bindgen-test.workspace = true
pretty_assertions.workspace = true

# Benchmarks will be added later

[lib]
crate-type = ["cdylib", "rlib"]
