[package]
name = "leptos-motion-core"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Core animation engine for Leptos Motion"
keywords.workspace = true
categories.workspace = true

[features]
default = ["core-animations", "raf", "waapi", "leptos-integration", "web-sys", "serde-support", "futures", "num-traits", "approx"]

# Core animation features
core-animations = []  # Basic animation types and transitions
raf = []  # RequestAnimationFrame engine
waapi = ["web-sys/Animation", "web-sys/KeyframeEffect"]  # Web Animations API engine
spring = []  # Spring physics animations
easing = []  # Advanced easing functions

# Web platform features
web-sys = []  # Full web-sys features (enables web-sys dependency)
minimal-web-sys = ["web-sys/console", "web-sys/Window", "web-sys/Document", "web-sys/Element", "web-sys/HtmlElement", "web-sys/CssStyleDeclaration"]  # Minimal web-sys features

# Framework integration features
leptos-integration = ["leptos"]  # Leptos integration (adds ICU dependencies)
no-icu = []  # Avoid ICU dependencies

# Serialization features
serde-support = ["serde", "serde_json"]  # Optional serde support for serialization
minimal-serialization = []  # Custom minimal serialization

# Performance and optimization features
performance-metrics = []  # Performance monitoring and metrics
memory-optimization = []  # Memory usage optimization
lazy-loading = []  # Lazy loading of animation modules
gpu-acceleration = []  # GPU acceleration support

# Engine variants
simplified-engine = []  # Simplified animation engine
full-engine = []  # Full-featured animation engine
hybrid-engine = []  # Hybrid engine with automatic fallbacks

# Advanced features
advanced-easing = []  # Advanced easing functions (bezier, spring, etc.)
spring-physics = []  # Spring physics simulation
timeline-animations = []  # Timeline-based animations
gesture-support = []  # Gesture recognition and handling
layout-animations = []  # Layout animation support (FLIP)

# Core dependency features
futures = ["dep:futures", "dep:wasm-bindgen-futures"]  # Futures support for async operations
num-traits = ["dep:num-traits"]  # Numeric traits support
approx = ["dep:approx"]  # Approximation algorithms

# Bundle size optimization presets
minimal = ["core-animations", "raf", "minimal-serialization"]  # Minimal build
standard = ["core-animations", "raf", "waapi", "leptos-integration", "web-sys", "serde-support", "futures", "num-traits", "approx"]  # Standard build
full = ["core-animations", "raf", "waapi", "spring", "easing", "leptos-integration", "web-sys", "serde-support", "performance-metrics", "memory-optimization", "lazy-loading", "gpu-acceleration", "hybrid-engine", "advanced-easing", "spring-physics", "timeline-animations", "gesture-support", "layout-animations", "futures", "num-traits", "approx"]  # Full-featured build  # Full-featured build

[dependencies]
# Math and calculations - now optional
num-traits = { workspace = true, optional = true }
approx = { workspace = true, optional = true }

# Web APIs - conditional features for bundle size optimization
web-sys = { workspace = true, features = [
    "console",
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "CssStyleDeclaration",
    "DomRect",
    "Performance",
    "AnimationEvent",
    "TransitionEvent",
    "Animation",
    "KeyframeEffect",
], optional = true }
js-sys.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures = { workspace = true, optional = true }

# Async - now optional
futures = { workspace = true, optional = true }

# Leptos (for motion values) - optional to avoid ICU dependencies
leptos = { workspace = true, optional = true }

# Utilities
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
thiserror.workspace = true
once_cell.workspace = true
log.workspace = true

[dev-dependencies]
wasm-bindgen-test.workspace = true
pretty_assertions.workspace = true

# Benchmarks will be added later

[lib]
crate-type = ["cdylib", "rlib"]
