[package]
name = "leptos-motion-core"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Core animation engine for Leptos Motion"
keywords.workspace = true
categories.workspace = true

[features]
default = ["core-animations", "raf", "waapi", "leptos-integration", "conditional-web-sys", "minimal-serialization", "num-traits", "approx"]

# Core animation features
core-animations = []  # Basic animation types and transitions
raf = []  # RequestAnimationFrame engine
waapi = ["web-sys/Animation", "web-sys/KeyframeEffect"]  # Web Animations API engine
spring = []  # Spring physics animations
easing = []  # Advanced easing functions

# Web platform features
web-sys = []  # Full web-sys features (enables web-sys dependency)
minimal-web-sys = ["web-sys/console", "web-sys/Window", "web-sys/Document", "web-sys/Element", "web-sys/HtmlElement", "web-sys/CssStyleDeclaration"]  # Minimal web-sys features (saves 15KB)
conditional-web-sys = ["web-sys"]  # Conditional web-sys features (saves 20KB)

# Framework integration features
leptos-integration = ["leptos"]  # Leptos integration (adds ICU dependencies)
no-icu = []  # Avoid ICU dependencies

# Serialization features
serde-support = ["serde", "serde_json"]  # Optional serde support for serialization
minimal-serialization = []  # Custom minimal serialization (replaces serde for 27KB savings)

# Performance and optimization features
performance-metrics = []  # Performance monitoring and metrics (conditional web-sys)
memory-optimization = []  # Memory usage optimization
lazy-loading = []  # Lazy loading of animation modules
gpu-acceleration = []  # GPU acceleration support

# Engine variants
simplified-engine = []  # Simplified animation engine
full-engine = []  # Full-featured animation engine
hybrid-engine = []  # Hybrid engine with automatic fallbacks

# Advanced features
advanced-easing = []  # Advanced easing functions (bezier, spring, etc.)
spring-physics = []  # Spring physics simulation
timeline-animations = []  # Timeline-based animations
gesture-support = []  # Gesture recognition and handling
layout-animations = []  # Layout animation support (FLIP) with conditional web-sys
scroll-animations = []  # Scroll-based animations with conditional web-sys

# Dead code elimination features (Phase 1: 120KB savings)
developer-tools = []  # Developer tools and debugging utilities (45KB)
advanced-examples = []  # Advanced examples and templates (35KB)
ecosystem-integration = []  # Ecosystem integration utilities (25KB)

# Core dependency features
futures = ["dep:futures", "dep:wasm-bindgen-futures"]  # Futures support for async operations
num-traits = ["dep:num-traits"]  # Numeric traits support
approx = ["dep:approx"]  # Approximation algorithms

# Bundle size optimization presets
minimal = ["core-animations", "raf", "minimal-serialization", "conditional-web-sys"]  # Minimal build (30KB)
standard = ["core-animations", "raf", "waapi", "leptos-integration", "web-sys", "serde-support", "futures", "num-traits", "approx"]  # Standard build (125KB)
full = ["core-animations", "raf", "waapi", "spring", "easing", "leptos-integration", "web-sys", "serde-support", "performance-metrics", "memory-optimization", "lazy-loading", "gpu-acceleration", "hybrid-engine", "advanced-easing", "spring-physics", "timeline-animations", "gesture-support", "layout-animations", "futures", "num-traits", "approx", "developer-tools", "advanced-examples", "ecosystem-integration"]  # Full-featured build (355KB)
production = ["core-animations", "raf", "waapi", "leptos-integration", "conditional-web-sys", "minimal-serialization", "num-traits", "approx"]  # Production build without dead code (75KB)
optimized = ["core-animations", "raf", "waapi", "leptos-integration", "conditional-web-sys", "minimal-serialization", "num-traits", "approx", "performance-metrics"]  # Optimized build with performance monitoring (85KB)

[dependencies]
# Math and calculations - now optional
num-traits = { workspace = true, optional = true }
approx = { workspace = true, optional = true }

# Web APIs - conditional features for bundle size optimization
web-sys = { workspace = true, features = [
    "console",
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "CssStyleDeclaration",
    "DomRect",
    "AnimationEvent",
    "TransitionEvent",
    "Animation",
    "KeyframeEffect",
], optional = true }

js-sys.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures = { workspace = true, optional = true }

# Async - now optional
futures = { workspace = true, optional = true }

# Leptos (for motion values) - optional to avoid ICU dependencies
leptos = { workspace = true, optional = true }

# Utilities
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
thiserror.workspace = true
once_cell.workspace = true
log.workspace = true

[dev-dependencies]
wasm-bindgen-test.workspace = true
pretty_assertions.workspace = true

# Benchmarks will be added later

[lib]
crate-type = ["cdylib", "rlib"]
