[package]
name = "leptos-motion-dom"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "DOM integration and components for Leptos Motion"
keywords.workspace = true
categories.workspace = true

[features]
default = ["core-components"]
# Core features
core-components = []
ssr = ["leptos/ssr"]
hydrate = ["leptos/hydrate"]
csr = ["leptos/csr"]

# Optional features for bundle size optimization
motion-div = []
motion-span = []
motion-button = []
motion-img = []
motion-svg = []
motion-input = []
motion-textarea = []
motion-select = []
animate-presence = []
drag-support = []
hover-support = []
tap-support = []
simplified-events = []
performance-monitoring = []
css-animations = []

[dependencies]
# Core motion
leptos-motion-core.workspace = true
leptos-motion-gestures.workspace = true
leptos-motion-layout.workspace = true

# Leptos
leptos.workspace = true

# Web APIs
web-sys = { workspace = true, features = [
    "Element",
    "HtmlElement",
    "Node",
    "EventTarget",
    "Event",
    "MouseEvent",
    "TouchEvent", 
    "PointerEvent",
    "CssStyleDeclaration",
    "DomRect",
    "DomTokenList",
    "MutationObserver",
    "MutationObserverInit",
    "Performance",
] }
wasm-bindgen.workspace = true
js-sys.workspace = true

# Utilities
serde.workspace = true
serde_json = "1.0"
thiserror.workspace = true
paste.workspace = true
log = "0.4"

[dev-dependencies]
wasm-bindgen-test.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]