[package]
name = "leptos-motion-dom"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "DOM integration and components for Leptos Motion"
keywords.workspace = true
categories.workspace = true

[features]
default = ["core-components"]
# Core features
core-components = []
ssr = ["leptos/ssr"]
hydrate = ["leptos/hydrate"]
csr = ["leptos/csr"]

# Optional features for bundle size optimization
motion-div = []
motion-span = []
motion-button = []
motion-img = []
motion-svg = []
motion-input = []
motion-textarea = []
motion-select = []
animate-presence = []
drag-support = []
hover-support = []
tap-support = []
simplified-events = []
performance-monitoring = []
css-animations = []

[dependencies]
# Core motion
leptos-motion-core = { path = "../leptos-motion-core" }
leptos-motion-gestures = { path = "../leptos-motion-gestures" }
leptos-motion-layout = { path = "../leptos-motion-layout" }

# Leptos
leptos.workspace = true

# Web APIs
web-sys = { workspace = true, features = [
    "Element",
    "HtmlElement",
    "Node",
    "EventTarget",
    "Event",
    "MouseEvent",
    "TouchEvent",
    "PointerEvent",
    "CssStyleDeclaration",
    "DomRect",
    "DomTokenList",
    "MutationObserver",
    "MutationObserverInit",
    "Performance",
] }
wasm-bindgen.workspace = true
js-sys.workspace = true

# Utilities
serde.workspace = true
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
thiserror.workspace = true
paste.workspace = true
log = "0.4"

[dev-dependencies]
wasm-bindgen-test.workspace = true
proptest.workspace = true
arbitrary.workspace = true
quickcheck.workspace = true
test-case.workspace = true
rstest.workspace = true
pretty_assertions.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
