[package]
name = "leptos-motion-gestures"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Gesture recognition and interaction handling for Leptos Motion"
keywords.workspace = true
categories.workspace = true

[features]
default = ["core-gestures"]
# Core features
core-gestures = []

# Optional features for bundle size optimization
multi-touch = []
drag-gestures = []
hover-gestures = []
tap-gestures = []
pinch-gestures = []
rotation-gestures = []
pan-gestures = []
simplified-gestures = []
advanced-gestures = []

[dependencies]
# Core motion
leptos-motion-core = "0.8.0"

# Leptos
leptos.workspace = true

# Web APIs
web-sys = { workspace = true, features = [
    "Element",
    "EventTarget",
    "Event",
    "MouseEvent",
    "TouchEvent",
    "PointerEvent",
    "Touch",
    "TouchList",
    "DomRect",
    "AddEventListenerOptions",
    "Node",
    "Window",
    "Document",
] }
wasm-bindgen.workspace = true
js-sys.workspace = true

# Utilities
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
num-traits.workspace = true
log.workspace = true

[dev-dependencies]
wasm-bindgen-test.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
