[package]
name = "leptos-motion-studio"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Visual animation editor and motion studio for leptos-motion"

[dependencies]
# Leptos dependencies
leptos.workspace = true
leptos_macro.workspace = true
reactive_graph.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true

# Leptos Motion dependencies
leptos-motion-core.workspace = true
leptos-motion-dom.workspace = true

# Web APIs for visual editing
web-sys = { workspace = true, features = [
    "console",
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "WebGlRenderingContext",
    "WebGl2RenderingContext",
    "CssStyleDeclaration",
    "DomRect",
    "Performance",
    "Animation",
    "KeyframeEffect",
    "EventTarget",
    "Event",
    "MouseEvent",
    "TouchEvent",
    "PointerEvent",
    "WheelEvent",
    "KeyboardEvent",
    "DragEvent",
    "FileList",
    "File",
    "Blob",
    "Url",
    "Response",
    "Request",
    "Headers",
    "FormData",
    "History",
    "Location",
    "Storage",
    "MessageEvent",
    "WebSocket",
    "OffscreenCanvas",
    "ImageData",
    "Path2d",
    "SvgElement",
    "SvgPathElement",
    "SvgAnimateElement",
] }
js-sys.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true

# Serialization for project files
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

# Math and graphics
glam = { version = "0.27", optional = true }
lyon = { version = "1.0", optional = true }

# Utility crates
thiserror.workspace = true
anyhow.workspace = true
uuid = { version = "1.8", features = ["v4"] }
indexmap = "2.1"

# Async support
futures.workspace = true
wasm-bindgen-test.workspace = true

[dev-dependencies]
rstest.workspace = true
proptest.workspace = true
pretty_assertions.workspace = true
test-case.workspace = true

[features]
default = ["visual-editor", "timeline-editor", "3d-support", "webgl"]
visual-editor = []
timeline-editor = []
3d-support = ["glam"]
webgl = []
svg-morphing = ["lyon"]
project-management = []
export-formats = []
real-time-preview = []
