[package]
name = "leptos-motion"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = ["raf", "waapi", "gestures", "layout", "scroll", "dom"]
# Core features
raf = ["leptos-motion-core/raf"]
waapi = ["leptos-motion-core/waapi"]
spring = ["leptos-motion-core/spring"]
easing = ["leptos-motion-core/easing"]
gestures = ["leptos-motion-gestures"]
layout = ["leptos-motion-layout"]
scroll = ["leptos-motion-scroll"]
dom = ["leptos-motion-dom"]
ssr = ["leptos-motion-dom/ssr"]
hydrate = ["leptos-motion-dom/hydrate"]
csr = ["leptos-motion-dom/csr"]

# Minimal bundle size features
minimal = ["raf", "waapi"]
core-only = ["raf", "waapi"]
basic-components = ["raf", "waapi", "dom"]

# Performance features
performance-metrics = ["leptos-motion-core/performance-metrics"]

[dependencies]
# All motion crates
leptos-motion-core = "0.8.0"
leptos-motion-dom = { version = "0.8.0", optional = true }
leptos-motion-gestures = { version = "0.8.0", optional = true }
leptos-motion-layout = { version = "0.8.0", optional = true }
leptos-motion-scroll = { version = "0.8.0", optional = true }
leptos-motion-macros = "0.8.0"

# Re-export core dependencies
leptos.workspace = true
web-sys.workspace = true
wasm-bindgen.workspace = true
serde.workspace = true

[dev-dependencies]
wasm-bindgen-test.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
